# pitch_deck_gpt

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit.py
LangChain for LLM/: L1-Model_prompt_parser.ipynb  L2-Memory.ipynb  L3-Chains.ipynb  L4-QnA.ipynb  L5-Evaluation.ipynb  L6-Agents.ipynb
LangChain for LLM/.ipynb_checkpoints/: L5-Evaluation-checkpoint.ipynb  L6-Agents-checkpoint.ipynb
data/: startups.csv  theme1.pptx  theme3.pptx  theme4.pptx
notebooks/: agent_research.ipynb  concept.ipynb  input_snakerzr.ipynb  problem.ipynb  product.ipynb
notebooks/.ipynb_checkpoints/: example-checkpoint.ipynb
src/: PitchAssistant.py
