[tool.poetry]
name = "pitch-deck-gpt"
version = "0.1.0"
description = "Chatbot for Creating Startup Pitch Decks"
authors = ["Alexander Evdokimov <83905079+snakerzr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.9"
langchain = "^0.0.271"
streamlit = "^1.25.0"
python-dotenv = "^1.0.0"
tiktoken = "^0.4.0"
chromadb = "^0.4.7"
duckduckgo-search = "^3.8.5"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
python-pptx = "^0.6.21"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
pandas = "^2.0.3"
wikipedia = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
